--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,28 +8,35 @@
           placeholder="Type new todo"
           autofocus
           type="text"
+          (change)="changeHandler($event)"
         />
       </div>
     </header>
     <div class="container todoapp-wrapper">
       <!-- This section should be hidden by default and shown when there are todos -->
+       <pre>
+        <code>
+          {{ tasks() | json }}
+        </code>
+       </pre>
       <section class="main">
         <ul class="todo-list">
+          <li *ngFor="let task of tasks() index as i" >
+            <div class="view">
+              <input class="toggle" type="checkbox" [checked]="task.completed" (change)="updateTask(i)"/>
+              <label>{{task.title}}</label>
+              <button class="destroy" (click)="deleteTask(i)"></button>
+            </div>
+            <input class="edit" value="Buy a unicorn" />
+          </li>
+          <!--
           <li class="completed">
             <div class="view">
-              <input class="toggle" type="checkbox" checked />
-              <label>Learn JavaScript</label>
+              <input class="toggle" type="checkbox" checked/>
+              <label>new</label>
               <button class="destroy"></button>
             </div>
             <input class="edit" value="Learn JavaScript" />
-          </li>
-          <li>
-            <div class="view">
-              <input class="toggle" type="checkbox" />
-              <label>Buy a unicorn</label>
-              <button class="destroy"></button>
-            </div>
-            <input class="edit" value="Buy a unicorn" />
           </li>
           <li class="editing">
             <div class="view">
@@ -38,13 +45,18 @@
               <button class="destroy"></button>
             </div>
             <input class="edit" value="Make dishes" />
-          </li>
+          </li>-->
         </ul>
       </section>
       <!-- This footer should be hidden by default and shown when there are todos -->
       <footer class="footer">
         <!-- This should be `0 items left` by default -->
-        <span class="todo-count"><strong>0</strong> item left</span>
+        <span class="todo-count" *ngIf="tasks().length == 1; else plural"><strong>{{tasks().length}}</strong> item left</span>
+        <ng-template #plural>
+          <span class="todo-count"><strong>{{tasks().length}}</strong> items left</span>
+        </ng-template>
+        
+
         <!-- Remove this if you don't implement routing -->
         <ul class="filters">
           <li>
