--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -3,7 +3,7 @@
 <h2>{{ welcome }}</h2>
 
 <ul>
-  <li *ngFor="let task of tasks">
+  <li *ngFor="let task of tasks()">
     {{ task }}
   </li>
 </ul>
@@ -15,24 +15,40 @@
 
 <hr>
 <img [src]="img" alt="">
-<input type="text" [value]="person.age">
-<button [disabled]="disabled">Click me</button>
+<input type="text" [value]="person().age">
+<button [disabled]="disabled">Click me</button> 
 
-<p>person: {{person.name}}</p>
+<p>person: {{person().name}}</p>
 
 <hr>
 
 <button (click)="clickHandler()">click me</button>
 <button (dblclick)="clickHandler()">double me</button>
 <p>(change)</p>
-<input type="text" [value]="person.age" (change)="changeHandler($event)">
+<input type="text" [value]="person().age" (change)="changeHandler($event)">
 
 <p>(keydown)</p>
-<input type="text" [value]="person.age" (keydown)="keyHandler($event)">
+<input type="text" [value]="person().age" (keydown)="keyHandler($event)">
 
 
+<ul>
+  <p>total: {{ tasks().length }}</p>
+  <li *ngFor="let task of tasks(); index as i">
+    {{i}} {{ task }}
+  </li>
+</ul>
 <h1>Signals</h1>
-<input type="text" [value]="name()" (keydown)="changeHandler($event)">
+<input type="text" [value]="name()" (input)="keyHandler($event)">
+<hr>
+<div *ngIf="name() === 'Manuel'">
+  My Content
+</div>
 
+<div *ngIf="person().name === 'Manuel' && person().age >= 18; else elsebloque">
+  Soy Manuel y soy mayor de edad
+</div>
+<ng-template #elsebloque>
+  Soy Menorcito
+</ng-template>
 
 </div>
