--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -51,4 +51,15 @@
   Soy Menorcito
 </ng-template>
 
+
+<hr>
+
+<input type="color" [formControl]="colorCtrl">
+<p>color: {{colorCtrl.value}}</p>
+
+<svg>
+  <g>
+    <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value"  />
+  </g>
+</svg>
 </div>
